# pocotest

./: .dev-config.example  .gitignore  .gitmodules  DEVELOPMENT.md  ENUMERATION_ANALYSIS.md  Makefile  Poco Initial Enumeration 3.pgnlog  Poco Initial Enumeration 4.pgnlog  Poco Initial Enumeration new.pgnlog  Poco Initial Enumeration.pgnlog  Poco-CAN-protocol.odt  README.md  README_IPG100.md  SCRIPTING_FEATURE.md  Shadowcaster Initial Enumeration.pgnlog  Simrad_to_Poco2.pgnlog  Simrad_to_Shadowcaster.pgnlog  WASM_BUILD_SUCCESS.md  dev-shortcuts.sh  dev-workflow.sh  icon_converter.cpp  install.sh  minimal_wasm_test.cpp  nmea2000-analyzer.sh  nmea2000.dbc  nmea2000_log_20250910_151518.pgnlog  nmea2000_log_simrad-shadowcaster.txt  nmea2000_log_simrad_poco.txt  poco_mfdstart.pgnlog  poco_zoneon_zoneoff.pgnlog  pocotest  pocotest.pro  shadowcaster_effectsoff_effectson.pgnlog  shadowcaster_mfdstart.pgnlog  shadowcaster_zoneon_zoneoff.pgnlog  start_cannelloni_client.sh  start_mcba.sh
api/: DISTRIBUTION.md  Makefile  README.md  example_usage.c  lumitec_poco_api.c  lumitec_poco_api.h  nmea2000_integration.cpp  nmea2000_integration.h  test_poco_api.c
api/python/: Makefile  README.md  example_usage.py  integration_examples.py  lumitec_poco.py  (+3 more)
bridge-daemon/: CMakeLists.txt  README.md  README_DEPLOYMENT.md  deploy-to-rpi.sh  install-rpi.sh  nmea2000-bridge.conf  nmea2000-bridge.service.in  nmea2000_bridge.cpp  test-bridge.py
resources/: nmea2000-analyzer.desktop  resources.qrc
scripts/: dev-shortcuts.sh  example_tests.js  test_suite.json
src/: LumitecPoco.cpp  LumitecPoco.h  NMEA2000_WASM.cpp  NMEA2000_WASM.h  actionrecorder.cpp  actionrecorder.h  dbcdecoder.cpp  dbcdecoder.h  devicelistdialog.cpp  devicelistdialog.h  devicemainwindow.cpp  devicemainwindow.h  directchannelcontroldialog.cpp  directchannelcontroldialog.h  instanceconflictanalyzer.cpp  instanceconflictanalyzer.h  main.cpp  mainwindow.cpp  mainwindow.h  n2k_linux_port.cpp  pgndialog.cpp  pgndialog.h  pgnlogdialog.cpp  pgnlogdialog.h  pocodevicedialog.cpp  pocodevicedialog.h  testscriptengine.cpp  testscriptengine.h  thememanager.cpp  thememanager.h  toastmanager.cpp  toastmanager.h  toastnotification.cpp  toastnotification.h  zonelightingdialog.cpp  zonelightingdialog.h
ui/: mainwindow.ui
wasm-dev/: NMEA2000_WASM.cpp  README.md  README_WASM.md  build-manual-wasm.sh  build-simple-wasm.sh  build-wasm.sh  setup-wasm.sh  wasm_shell.html
(+4 files in other folders)
